fixed issue where footer is covering last row of products

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11061,7 +11061,7 @@ p {
 
 .card-container {
   margin-top: 50px; 
-  margin-bottom: 20px;
+  margin-bottom: 100px;
 }
 
 
